# opencv-test-cpp

./: .gitignore  CMakeLists.txt  CMakeLists.txt-e  INSTALL.md  README.md  README.md-e  Toolchain-linux-gcc6.cmake-e  Toolchain-linux-mingw-w64.cmake  Toolchain-linux-mingw-w64.cmake-e  config.hpp.in-e  main.cpp  main.cpp-e
